--- a/index.html
+++ b/index.html
@@ -7,35 +7,35 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-	<h1>Our Menu</h1>
+	<h1>OUR MENU</h1>
 	<div class="row">
-		<div class="col-lg-4 col-md-6">
+		<div class="column col-lg-4 col-md-6">
 			<div class="box">
+				<div class="inside">
+					<h3>DESSERTS</h3>
+				</div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis maxime dolorem tempore autem at eveniet iste vel laborum esse voluptatibus fugit cupiditate excepturi rerum quo veritatis odit minima velit, delectus.
 				</p>
+			</div>
+		</div>
+		<div class="column col-lg-4 col-md-6">
+			<div class="box">
 				<div class="inside">
 					<h3>PIZZAS</h3>
 				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 col-md-6">
-			<div class="box">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis maxime dolorem tempore autem at eveniet iste vel laborum esse voluptatibus fugit cupiditate excepturi rerum quo veritatis odit minima velit, delectus.
 				</p>
-				<div class="inside">
-					<h3>SALADS</h3>
-				</div>
 			</div>
 
 		</div>
-		<div class="col-lg-4 col-md-12">
+		<div class="column col-lg-4 col-md-12">
 			<div class="box">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis maxime dolorem tempore autem at eveniet iste vel laborum esse voluptatibus fugit cupiditate excepturi rerum quo veritatis odit minima velit, delectus.
-				</p>
 				<div class="inside">
 					<h3>DRINKS</h3>
 				</div>
-			</div>			
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis maxime dolorem tempore autem at eveniet iste vel laborum esse voluptatibus fugit cupiditate excepturi rerum quo veritatis odit minima velit, delectus.
+				</p>
+			</div>		
 		</div>
 	</div>
 </body>
